# atomic_counter

./: README.md  build.sh  deploy.sh  docker-compose.yml  init.sql  scale.sh  test.sh  test_basic.sh  test_suit.sh
aggregator/: Cargo.toml  Dockerfile
aggregator/src/: main.rs
gateway/: Cargo.toml  Dockerfile  entrypoint.sh
gateway/src/: flush.rs  local_redis.rs  main.rs  readcache.rs  routes.rs
nginx/: nginx.conf
test/: 01_zero_count_key.sh  02_basic_count.sh  03_multiple_keys.sh  04_read_path_under_load.sh  05_health_spread.sh  06_aggregator_timing.sh  07_idempotent_reads.sh  08_high_cardinality.sh  09_scale_up.sh  10_replica_kill.sh  helpers.sh  run.sh  run_all.sh
