[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "tls-rustls"] }
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
